--- a/client/registration.html
+++ b/client/registration.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./index.css">
-    <script src="./login.js" defer></script>
+    <script src="./register.js" defer></script>
     <title>Project Athena</title>
 </head>
 <body>
@@ -13,16 +13,21 @@
 		<a href="">About Us</a>
     </nav>
     <section class="d-flex-column">
-        <p> Login Page</p>
-        <form id="login">
+        <p> Registeration Page</p>
+        <form id="registration">
             <div class = "container-input">
                 <input id="name" type="text" name="name" placeholder="Username" required>
+            </div>
+            <div class = "container-input">
+                <input id="email" type="text" name="email" placeholder="Email" required>
             </div>
             <div class = "container-input">
                 <input id="password" type="password" name="password" placeholder="Password" required>
             </div>
             <br>
-            <button class="login">Login</button>
+            <!-- <button class="login">Log In</button> -->
+            <button class="register">Register</button><br>
+            <!-- <button class="forgotPassword">Forgot Password?</button> -->
         </form>
     </section>
     
