Add dashboard and quiz pages

--- a/client/dashboard.html
+++ b/client/dashboard.html
@@ -3,9 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./dashboard.css">
     <title>Document</title>
 </head>
 <body>
+    <nav>
+        <a href="">Home</a>
+		<a href="">About Us</a>
+        <a href="./dashboard.html">Dashboard</a>
+    </nav>
     <p>THIS IS A DASHBOARD</p>
+    <div class="flex-container">
+        <div>Profile</div>
+        <div class ="classes">
+            <div>Class 1</div>
+            <div>Class 2</div>
+            <div>Class 3</div>
+        </div>
+      </div>
 </body>
 </html>
