--- a/client/login.html
+++ b/client/login.html
@@ -11,6 +11,7 @@
     <nav>
         <a href="">Home</a>
 		<a href="">About Us</a>
+        <a href="./dashboard.html">Dashboard</a>
     </nav>
     <section class="d-flex-column">
         <p> Login Page</p>
@@ -23,6 +24,7 @@
             </div>
             <br>
             <button class="login">Login</button>
+            <button class="register">Register</button>
         </form>
     </section>
     
