--- a/client/registration.html
+++ b/client/registration.html
@@ -11,9 +11,10 @@
     <nav>
         <a href="">Home</a>
 		<a href="">About Us</a>
+        <a href="./dashboard.html">Dashboard</a>
     </nav>
     <section class="d-flex-column">
-        <p> Registeration Page</p>
+        <p> Registration Page</p>
         <form id="registration">
             <div class = "container-input">
                 <input id="name" type="text" name="name" placeholder="Username" required>
@@ -25,8 +26,8 @@
                 <input id="password" type="password" name="password" placeholder="Password" required>
             </div>
             <br>
-            <!-- <button class="login">Log In</button> -->
             <button class="register">Register</button><br>
+            <button class="login">Log In</button>
             <!-- <button class="forgotPassword">Forgot Password?</button> -->
         </form>
     </section>
