--- a/client/quiz.html
+++ b/client/quiz.html
@@ -12,6 +12,6 @@
         <a href="./dashboard.html">Dashboard</a>
     </nav>
     <p>THIS IS A QUIZ</p>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/quIjo6P9DQE?si=pSH8x_QtRlMRdkOH" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/quIjo6P9DQE?si=pSH8x_QtRlMRdkOH" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen alt="Ancient Egypt History Lesson"></iframe>
 </body>
 </html>
