--- a/client/topic.html
+++ b/client/topic.html
@@ -16,58 +16,26 @@
     <br>
     <div class="flex-container">
         <div class="profile">
-            <p>Profile</p>
+            <p>Topic</p>
             <img class="test" src="https://static.vecteezy.com/system/resources/thumbnails/002/318/271/small_2x/user-profile-icon-free-vector.jpg">
             <div class ="profileBody">
-                <p>Student Name:</p>
-                <p>Total Progress:</p>
-                <p>Total Summary:</p>
+                <p>Topic Description:</p>
             </div>
         </div>
     
         <div class="classes">
             <div>
-                <p>Topic 1</p>
+                <p>Quiz 1</p>
                 <img src="./assets/burger.png">
                 <p>This is topic 1 blah bl1</p>
             </div>
             <div>
-                <p>Topic 2</p>
+                <p>Quiz 2</p>
                 <img src="./assets/burger.png">
                 <p>This is t§123§123h</p>
             </div>
             <div>
-                <p>Topic 3</p>
-                <img src="./assets/burger.png">
-                <p>blah</p>
-            </div>
-            <div>
-                <p>Topic 4</p>
-                <img src="./assets/burger.png">
-                <p>blah</p>
-            </div>
-            <div>
-                <p>Topic 5</p>
-                <img src="./assets/burger.png">
-                <p>blah</p>
-            </div>
-            <div>
-                <p>Topic 6</p>
-                <img src="./assets/burger.png">
-                <p>blah</p>
-            </div>
-            <div>
-                <p>Topic 7</p>
-                <img src="./assets/burger.png">
-                <p>blah</p>
-            </div>
-            <div>
-                <p>Topic 8</p>
-                <img src="./assets/burger.png">
-                <p>blah</p>
-            </div>
-            <div>
-                <p>Topic 9</p>
+                <p>Quiz 3</p>
                 <img src="./assets/burger.png">
                 <p>blah</p>
             </div>
