Added button for topic images

--- a/client/dashboard.html
+++ b/client/dashboard.html
@@ -7,19 +7,19 @@
     <title>Document</title>
 </head>
 <body>
-    <nav>
-        <a href="">Home</a>
-		<a href="">About Us</a>
-        <a href="./dashboard.html">Dashboard</a>
-        <a href="">Log Out</a>
-    </nav>
+    <ul class="nav-links">
+        <li><a href="./dashboard.html">Dashboard</a></li>
+        <li class="logOut"><a href="#">Log Out</a></li>
+      </ul>
     <br>
     <div class="flex-container">
         <div class="profile">
             <p>Profile</p>
             <img class="test" src="https://static.vecteezy.com/system/resources/thumbnails/002/318/271/small_2x/user-profile-icon-free-vector.jpg">
             <div class ="profileBody">
+                <p>Student ID:</p>
                 <p>Student Name:</p>
+                <p>Email Address:</p>
                 <p>Total Progress:</p>
                 <p>Total Summary:</p>
             </div>
@@ -27,47 +27,48 @@
     
         <div class="classes">
             <div>
-                <p>Topic 1</p>
-                <img src="./assets/burger.png">
-                <p>This is topic 1 blah bl1</p>
+                <p>Ancient Egypt</p>
+                <input type="image" src="./assets/burger.png" style="width: 50px;"/>
+                <p>Description:</p>
+                <p>Progress: 75%</p>
             </div>
             <div>
-                <p>Topic 2</p>
+                <p>Persian Empire</p>
                 <img src="./assets/burger.png">
-                <p>This is t§123§123h</p>
+                <p>Progress: 0%</p>
             </div>
             <div>
-                <p>Topic 3</p>
-                <img src="./assets/burger.png">
-                <p>blah</p>
-            </div>
-            <div>
-                <p>Topic 4</p>
+                <p>Ancient China</p>
                 <img src="./assets/burger.png">
                 <p>blah</p>
             </div>
             <div>
-                <p>Topic 5</p>
+                <p>Bronze Age</p>
                 <img src="./assets/burger.png">
                 <p>blah</p>
             </div>
             <div>
-                <p>Topic 6</p>
+                <p>Tudors</p>
                 <img src="./assets/burger.png">
                 <p>blah</p>
             </div>
             <div>
-                <p>Topic 7</p>
+                <p>Vikings</p>
                 <img src="./assets/burger.png">
                 <p>blah</p>
             </div>
             <div>
-                <p>Topic 8</p>
+                <p>Ancient Rome</p>
                 <img src="./assets/burger.png">
                 <p>blah</p>
             </div>
             <div>
-                <p>Topic 9</p>
+                <p>Ancient Greece</p>
+                <img src="./assets/burger.png">
+                <p>blah</p>
+            </div>
+            <div>
+                <p>Aztec Empire</p>
                 <img src="./assets/burger.png">
                 <p>blah</p>
             </div>
