--- a/client/quiz.html
+++ b/client/quiz.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./dashboard.css">    
     <title>Document</title>
 </head>
 <body>
-    <nav>
-        <a href="">Home</a>
-		<a href="">About Us</a>
-        <a href="./dashboard.html">Dashboard</a>
-    </nav>
+    <ul class="nav-links">
+        <li><a href="./dashboard.html">Dashboard</a></li>
+        <li class="logOut"><a href="#">Log Out</a></li>
+      </ul>
     <p>THIS IS A QUIZ</p>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/quIjo6P9DQE?si=pSH8x_QtRlMRdkOH" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen alt="Ancient Egypt History Lesson"></iframe>
 </body>
