Added click to topic icons

--- a/client/dashboard.html
+++ b/client/dashboard.html
@@ -26,48 +26,48 @@
         </div>
     
         <div class="classes">
-            <div>
+            <div onclick="location.href='./quiz.html';" style="cursor: pointer;">
                 <p>Ancient Egypt</p>
-                <input type="image" src="./assets/burger.png" style="width: 50px;"/>
+                <img src="./assets/Topics Icon/Ancient Egypt Icon.png">
                 <p>Description:</p>
                 <p>Progress: 75%</p>
             </div>
-            <div>
+            <div onclick="location.href='./quiz.html';" style="cursor: pointer;">
                 <p>Persian Empire</p>
-                <img src="./assets/burger.png">
+                <img src="./assets/Topics Icon/Persian Empire.png">
                 <p>Progress: 0%</p>
             </div>
-            <div>
+            <div onclick="location.href='./quiz.html';" style="cursor: pointer;">
                 <p>Ancient China</p>
-                <img src="./assets/burger.png">
+                <img src="./assets/Topics Icon/Ancient China Icon.png">
                 <p>blah</p>
             </div>
-            <div>
+            <div onclick="location.href='./quiz.html';" style="cursor: pointer;">
                 <p>Bronze Age</p>
                 <img src="./assets/burger.png">
                 <p>blah</p>
             </div>
-            <div>
+            <div onclick="location.href='./quiz.html';" style="cursor: pointer;">
                 <p>Tudors</p>
                 <img src="./assets/burger.png">
                 <p>blah</p>
             </div>
-            <div>
+            <div onclick="location.href='./quiz.html';" style="cursor: pointer;">
                 <p>Vikings</p>
                 <img src="./assets/burger.png">
                 <p>blah</p>
             </div>
-            <div>
+            <div onclick="location.href='./quiz.html';" style="cursor: pointer;">
                 <p>Ancient Rome</p>
                 <img src="./assets/burger.png">
                 <p>blah</p>
             </div>
-            <div>
+            <div onclick="location.href='./quiz.html';" style="cursor: pointer;">
                 <p>Ancient Greece</p>
                 <img src="./assets/burger.png">
                 <p>blah</p>
             </div>
-            <div>
+            <div onclick="location.href='./quiz.html';" style="cursor: pointer;">
                 <p>Aztec Empire</p>
                 <img src="./assets/burger.png">
                 <p>blah</p>
