--- a/client/registration.html
+++ b/client/registration.html
@@ -1,36 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./index.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./index.css" />
     <script src="./register.js" defer></script>
     <title>Project Athena</title>
-</head>
-<body>
+  </head>
+  <body>
     <nav>
-        <a href="">Home</a>
-		<a href="">About Us</a>
-        <a href="./dashboard.html">Dashboard</a>
+      <a href="./index.html">
+        <div class="logo">
+          <img src="./assets/image.png" alt="Athena app logo" />
+        </div>
+      </a>
+      <div class="title">Athena</div>
+      <div class="buttons">
+        <a href="./login.html">
+          <button>Login</button>
+        </a>
+      </div>
     </nav>
     <section class="d-flex-column">
-        <p> Registration Page</p>
-        <form id="registration">
-            <div class = "container-input">
-                <input id="name" type="text" name="name" placeholder="Username" required>
-            </div>
-            <div class = "container-input">
-                <input id="email" type="text" name="email" placeholder="Email" required>
-            </div>
-            <div class = "container-input">
-                <input id="password" type="password" name="password" placeholder="Password" required>
-            </div>
-            <br>
-            <button class="register">Register</button><br>
-            <button class="login">Log In</button>
-            <!-- <button class="forgotPassword">Forgot Password?</button> -->
-        </form>
+      <p>Registration Page</p>
+      <form id="registration">
+        <div class="container-input">
+          <input
+            id="name"
+            type="text"
+            name="name"
+            placeholder="Username"
+            required
+          />
+        </div>
+        <div class="container-input">
+          <input
+            id="email"
+            type="text"
+            name="email"
+            placeholder="Email"
+            required
+          />
+        </div>
+        <div class="container-input">
+          <input
+            id="password"
+            type="password"
+            name="password"
+            placeholder="Password"
+            required
+          />
+        </div>
+        <br />
+        <button class="register">Register</button><br />
+        <button class="login">Log In</button>
+        <!-- <button class="forgotPassword">Forgot Password?</button> -->
+      </form>
     </section>
-    
-</body>
+  </body>
 </html>
