--- a/client/login.html
+++ b/client/login.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./index.css" />
-    <script src="./login.js" defer></script>
+    <link rel="stylesheet" href="./assets/index.css" />
+    <link rel="stylesheet" href="./assets/login.css" />
+    <script src="./js/login.js" defer></script>
     <title>Project Athena</title>
   </head>
   <body>
@@ -21,31 +22,20 @@
         </a>
       </div>
     </nav>
-    <section class="d-flex-column">
-      <p>Login Page</p>
-      <form id="login">
-        <div class="container-input">
-          <input
-            id="name"
-            type="text"
-            name="name"
-            placeholder="Username"
-            required
-          />
-        </div>
-        <div class="container-input">
-          <input
-            id="password"
-            type="password"
-            name="password"
-            placeholder="Password"
-            required
-          />
-        </div>
-        <br />
-        <button class="login">Login</button>
-        <button class="register">Register</button>
-      </form>
-    </section>
+    <main>
+      <div class="login-content">
+        <form id="login">
+          <div class="form-control">
+            <label>Username</label>
+            <input id="name" type="text" name="name" required />
+          </div>
+          <div class="form-control">
+            <label>Password</label>
+            <input id="password" type="password" name="password" required />
+          </div>
+          <button class="login">Login</button>
+        </form>
+      </div>
+    </main>
   </body>
 </html>
