--- a/client/registration.html
+++ b/client/registration.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./index.css" />
-    <script src="./register.js" defer></script>
+    <link rel="stylesheet" href="./assets/index.css" />
+    <link rel="stylesheet" href="./assets/registration.css" />
+    <script src="./js/register.js" defer></script>
     <title>Project Athena</title>
   </head>
   <body>
@@ -21,41 +22,27 @@
         </a>
       </div>
     </nav>
-    <section class="d-flex-column">
-      <p>Registration Page</p>
-      <form id="registration">
-        <div class="container-input">
-          <input
-            id="name"
-            type="text"
-            name="name"
-            placeholder="Username"
-            required
-          />
-        </div>
-        <div class="container-input">
-          <input
-            id="email"
-            type="text"
-            name="email"
-            placeholder="Email"
-            required
-          />
-        </div>
-        <div class="container-input">
-          <input
-            id="password"
-            type="password"
-            name="password"
-            placeholder="Password"
-            required
-          />
-        </div>
-        <br />
-        <button class="register">Register</button><br />
-        <button class="login">Log In</button>
-        <!-- <button class="forgotPassword">Forgot Password?</button> -->
-      </form>
-    </section>
+    <main>
+      <div class="registration-content">
+        <form id="registration">
+          <div class="form-control">
+            <label>Username</label>
+            <input id="name" type="text" name="name" required />
+          </div>
+          <div class="form-control">
+            <label>Email</label>
+            <input id="email" type="text" name="email" required />
+          </div>
+          <div class="form-control">
+            <label>Password</label>
+            <input id="password" type="password" name="password" required />
+          </div>
+          <button class="register">Signup</button>
+        </form>
+      </div>
+    </main>
+    <footer>
+      <p>&copy;The Athena Project 2025</p>
+    </footer>
   </body>
 </html>
