--- a/client/dashboard.html
+++ b/client/dashboard.html
@@ -16,8 +16,8 @@
       </a>
       <div class="title">Athena</div>
       <div class="buttons">
-        <a href="./login.html">
-          <button>Login</button>
+        <a href="./index.html">
+          <button>Logout</button>
         </a>
       </div>
     </nav>
