--- a/client/login.html
+++ b/client/login.html
@@ -17,8 +17,8 @@
       </a>
       <div class="title">Athena</div>
       <div class="buttons">
-        <a href="./login.html">
-          <button>Login</button>
+        <a href="./registration.html">
+          <button>Register</button>
         </a>
       </div>
     </nav>
