update dashboard.js to clear local storage when clicking logout

--- a/client/dashboard.html
+++ b/client/dashboard.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./assets/index.css" />
     <link rel="stylesheet" href="./assets/dashboard.css" />
+    <script src="./js/dashboard.js" defer></script>
     <title>Document</title>
   </head>
   <body>
@@ -16,8 +17,8 @@
       </a>
       <div class="title">Athena</div>
       <div class="buttons">
-        <a href="./index.html">
-          <button>Logout</button>
+        <a>
+          <button id="logout">Logout</button>
         </a>
       </div>
     </nav>
