--- a/client/dashboard.html
+++ b/client/dashboard.html
@@ -24,18 +24,24 @@
     </nav>
     <main>
       <div class="flex-container">
-        <div class="profile">
-          <p>Profile</p>
-          <img
-            class="test"
-            src="https://static.vecteezy.com/system/resources/thumbnails/002/318/271/small_2x/user-profile-icon-free-vector.jpg"
-          />
-          <div class="profileBody">
-            <p>Student ID:</p>
-            <p>Student Name:</p>
-            <p>Email Address:</p>
-            <p>Total Progress:</p>
-            <p>Total Summary:</p>
+        <div>
+          <div class="profile">
+            <p>Profile</p>
+            <img
+              class="test"
+              src="https://static.vecteezy.com/system/resources/thumbnails/002/318/271/small_2x/user-profile-icon-free-vector.jpg"
+            />
+            <div class="profileBody">
+              <p>Student ID:</p>
+              <p>Student Name:</p>
+              <p>Email Address:</p>
+              <p>Total Progress:</p>
+              <p>Total Summary:</p>
+            </div>
+          </div>
+          <div class="intro">
+            <p>Welcome to the Athena Project, an interative learning platform for history lessons.</p><br>
+            <p><strong>To get started: </strong>click on one of the topics cards to the right. You'll be shown a short video about the topic, followed by a multiple choice quiz. You can see your scores for each lesson at the bottom of the card.</p>
           </div>
         </div>
         <div class="classes">
