add functionality to topic cards

--- a/client/dashboard.html
+++ b/client/dashboard.html
@@ -46,10 +46,10 @@
         </div>
         <div class="classes">
           <div onclick="location.href='./quiz.html';" style="cursor: pointer">
-            <p>Ancient Egypt</p>
+            <p class ="name"></p>
             <img src="./assets/Topics Icon/Ancient Egypt Icon.png" />
-            <p>Description:</p>
-            <p>Progress: 75%</p>
+            <p class="description">Description:</p>
+            <p class="score"></p>
           </div>
           <div onclick="location.href='./quiz.html';" style="cursor: pointer">
             <p>Persian Empire</p>
