Refactor quiz page and rename assets folder

--- a/client/dashboard.html
+++ b/client/dashboard.html
@@ -40,56 +40,60 @@
             </div>
           </div>
           <div class="intro">
-            <p>Welcome to the Athena Project, an interative learning platform for history lessons.</p><br>
-            <p><strong>To get started: </strong>click on one of the topics cards to the right. You'll be shown a short video about the topic, followed by a multiple choice quiz. You can see your scores for each lesson at the bottom of the card.</p>
+            <p>
+              Welcome to the Athena Project, an interative learning platform for
+              history lessons.
+            </p>
+            <br />
+            <p>
+              <strong>To get started: </strong>click on one of the topics cards
+              to the right. You'll be shown a short video about the topic,
+              followed by a multiple choice quiz. You can see your scores for
+              each lesson at the bottom of the card.
+            </p>
           </div>
         </div>
         <div class="classes">
           <div onclick="location.href='./quiz.html';" style="cursor: pointer">
-            <p class ="name"></p>
-            <img src="./assets/Topics Icon/Ancient Egypt Icon.png" />
-            <p class="description">Description:</p>
-            <p class="score"></p>
+            <p></p>
+            <img src="./assets/topics/ancient-egypt-icon.png" />
+            <p>Description:</p>
+            <p></p>
           </div>
           <div onclick="location.href='./quiz.html';" style="cursor: pointer">
             <p>Persian Empire</p>
-            <img src="./assets/Topics Icon/Persian Empire Icon.png" />
+            <img src="./assets/topics/persian-empire-icon.png" />
             <p>Progress: 0%</p>
           </div>
           <div onclick="location.href='./quiz.html';" style="cursor: pointer">
             <p>Ancient China</p>
-            <img src="./assets/Topics Icon/Ancient China Icon.png" />
+            <img src="./assets/topics/ancient-china-icon.png" />
             <p>blah</p>
           </div>
           <div onclick="location.href='./quiz.html';" style="cursor: pointer">
-            <p>Bronze Age</p>
-            <img src="./assets/burger.png" />
-            <p>blah</p>
+            <p></p>
+            <img src="./assets/topics/tudor-icon.png" />
+            <p></p>
           </div>
           <div onclick="location.href='./quiz.html';" style="cursor: pointer">
-            <p>Tudors</p>
-            <img src="./assets/burger.png" />
-            <p>blah</p>
+            <p>The Vikings</p>
+            <img src="./assets/topics/vikings-icon.png" />
+            <p>A video on the Vikings legends.</p>
           </div>
           <div onclick="location.href='./quiz.html';" style="cursor: pointer">
-            <p>Vikings</p>
-            <img src="./assets/burger.png" />
-            <p>blah</p>
+            <p>The Aztec Empire</p>
+            <img src="./assets/topics/aztec-empire-icon.png" />
+            <p>A video on the story of the Aztec Empire.</p>
+          </div>
+          <div onclick="location.href='./quiz.html';" style="cursor: pointer">
+            <p>Ancient Greeks</p>
+            <img src="./assets/topics/ancient-greece-icon.png" />
+            <p>A video on the story of the ancient Greeks.</p>
           </div>
           <div onclick="location.href='./quiz.html';" style="cursor: pointer">
             <p>Ancient Rome</p>
-            <img src="./assets/burger.png" />
-            <p>blah</p>
-          </div>
-          <div onclick="location.href='./quiz.html';" style="cursor: pointer">
-            <p>Ancient Greece</p>
-            <img src="./assets/burger.png" />
-            <p>blah</p>
-          </div>
-          <div onclick="location.href='./quiz.html';" style="cursor: pointer">
-            <p>Aztec Empire</p>
-            <img src="./assets/burger.png" />
-            <p>blah</p>
+            <img src="./assets/topics/ancient-rome-icon.png" />
+            <p>A video on the story of the Ancient Rome</p>
           </div>
         </div>
       </div>
