--- a/client/index.html
+++ b/client/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./assets/index.css" />
+    <script src="./js/index.js" defer></script>
     <title>Athena</title>
   </head>
   <body>
@@ -16,7 +17,7 @@
       <div class="title">Athena</div>
       <div class="buttons">
         <a href="./login.html">
-          <button>Login</button>
+          <button id="login">Login</button>
         </a>
       </div>
     </nav>
@@ -27,13 +28,13 @@
         </div>
         <div>
           <p>
-            The Athena Project is an education app where you can use it to make
+            The Athena Project is an educational app that you can use to make
             your history lessons more engaging.
           </p>
         </div>
       </div>
       <div class="signup-content">
-        <p>Sign up to access free games!</p>
+        <p>Signup to access free games!</p>
         <a href="./registration.html">
           <button>Signup</button>
         </a>
