--- a/client/login.html
+++ b/client/login.html
@@ -18,7 +18,7 @@
       <div class="title">Athena</div>
       <div class="buttons">
         <a href="./registration.html">
-          <button>Register</button>
+          <button>Signup</button>
         </a>
       </div>
     </nav>
@@ -37,5 +37,8 @@
         </form>
       </div>
     </main>
+    <footer>
+      <p>&copy;The Athena Project 2025</p>
+    </footer>
   </body>
 </html>
