--- a/client/quiz.html
+++ b/client/quiz.html
@@ -18,7 +18,7 @@
       <div class="title">Athena</div>
       <div class="buttons">
         <a href="./login.html">
-          <button>Login</button>
+          <button id="logout">Logout</button>
         </a>
       </div>
     </nav>
