--- a/client/dashboard.html
+++ b/client/dashboard.html
@@ -54,13 +54,19 @@
           </div>
         </div>
         <div class="classes">
-          <div onclick="location.href='./quiz.html';" style="cursor: pointer">
+          <div
+            onclick="location.href='./quiz.html?id=1';"
+            style="cursor: pointer"
+          >
             <p></p>
             <img src="./assets/topics/ancient-egypt-icon.png" />
             <p>Description:</p>
             <p></p>
           </div>
-          <div onclick="location.href='./quiz.html';" style="cursor: pointer">
+          <div
+            onclick="location.href='./quiz.html?id=2';"
+            style="cursor: pointer"
+          >
             <p>Persian Empire</p>
             <img src="./assets/topics/persian-empire-icon.png" />
             <p>Progress: 0%</p>
