add student ID, name and email to dashboard

--- a/client/dashboard.html
+++ b/client/dashboard.html
@@ -32,11 +32,11 @@
               src="https://static.vecteezy.com/system/resources/thumbnails/002/318/271/small_2x/user-profile-icon-free-vector.jpg"
             />
             <div class="profileBody">
-              <p>Student ID:</p>
-              <p>Student Name:</p>
-              <p>Email Address:</p>
-              <p>Total Progress:</p>
-              <p>Total Summary:</p>
+              <p>Student ID: <span id="student_id"></p>
+              <p>Student Name: <span id="student_name"></span></p>
+              <p>Email Address: <span id="email"></span></p>
+              <p>Total Progress: </p>
+              <p>Total Summary: </p>
             </div>
           </div>
           <div class="intro">
