Update quiz page

--- a/client/dashboard.html
+++ b/client/dashboard.html
@@ -54,10 +54,7 @@
           </div>
         </div>
         <div class="classes">
-          <div
-            onclick="location.href='./quiz.html?id=1';"
-            style="cursor: pointer"
-          >
+          <div style="cursor: pointer">
             <p></p>
             <img src="./assets/topics/ancient-egypt-icon.png" />
             <p>Description:</p>
