Fix incorrect column name in score model

--- a/client/dashboard.html
+++ b/client/dashboard.html
@@ -26,17 +26,22 @@
       <div class="flex-container">
         <div>
           <div class="profile">
-            <p>Profile</p>
+            <p><strong>Profile</strong></p>
             <img
               class="test"
               src="https://static.vecteezy.com/system/resources/thumbnails/002/318/271/small_2x/user-profile-icon-free-vector.jpg"
             />
             <div class="profileBody">
-              <p>Student ID:</p>
-              <p>Student Name:</p>
-              <p>Email Address:</p>
-              <p>Total Progress:</p>
-              <p>Total Summary:</p>
+              <p><strong>Student ID: </strong><span id="studentId"></span></p>
+              <p>
+                <strong>Student Name: </strong><span id="studentName"></span>
+              </p>
+              <p>
+                <strong>Student Email: </strong><span id="studentEmail"></span>
+              </p>
+              <p><strong>Total Score: </strong><span id="totalScore"></span></p>
+
+              <p><strong>Total Summary: </strong></p>
             </div>
           </div>
           <div class="intro">
