--- a/client/quiz.html
+++ b/client/quiz.html
@@ -39,29 +39,7 @@
         ></iframe>
         <p class="quiz-description">Description</p>
         <button class="quiz-start">Ready? Start the quiz</button>
-        <section class="questions">
-          <!-- <div class="question">
-            <p>Question</p>
-            <ol class="options">
-              <li>Option 1</li>
-              <li>Option 2</li>
-              <li>Option 3</li>
-              <li>Option 4</li>
-            </ol>
-          </div>
-          <div class="question">
-            <p>Question</p>
-            <ol class="options">
-              <li>Option 1</li>
-              <li>Option 2</li>
-              <li>Option 3</li>
-              <li>Option 4</li>
-            </ol>
-          </div> -->
-          <!-- <div class="score-sheet">
-            <p>Score: 10</p>
-          </div> -->
-        </section>
+        <section class="questions"></section>
       </div>
     </main>
     <footer>
