--- a/client/dashboard.html
+++ b/client/dashboard.html
@@ -27,10 +27,7 @@
         <div>
           <div class="profile">
             <p><strong>Profile</strong></p>
-            <img
-              class="test"
-              src="https://static.vecteezy.com/system/resources/thumbnails/002/318/271/small_2x/user-profile-icon-free-vector.jpg"
-            />
+            <img class="test" src="assets/profile-icon/female-student.png" />
             <div class="profileBody">
               <p><strong>Student ID: </strong><span id="studentId"></span></p>
               <p>
