--- a/client/registration.html
+++ b/client/registration.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/x-icon" href="./assets/image.png" />
     <link rel="stylesheet" href="./assets/index.css" />
     <link rel="stylesheet" href="./assets/registration.css" />
     <script src="./js/register.js" defer></script>
-    <title>Project Athena</title>
+    <title>Athena</title>
   </head>
   <body>
     <nav>
